<resources>
    <string name="app_name">LWRays</string>
    <string name="your_email_hint">Ваша почта</string>
    <string name="your_password_hint">Ваш пароль</string>
    <string name="login_button_hint">Войти</string>
    <string name="communities_tab_text">Сообщества</string>
    <string name="raid_tab_text">Рейд</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_lefts_default">Выходов из чата: 0</string>
    <string name="chat_joins_defaults">Входов в чат: 0</string>
    <string name="chat_message_sent_default">Отправлено сообщений: 0</string>
    <string name="input_message_hint">Сообщение</string>
    <string name="start_button_hint">Запустить</string>
</resources>