<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RaidFragment">

    <TextView
        android:id="@+id/chatIdHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hyatheus_font"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />
    <TextView
        android:id="@+id/totalMessageSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hyatheus_font"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/chat_message_sent_default"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp" />

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:hint="@string/input_message_hint"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:maxLines="1"
        android:layout_marginBottom="100dp" />

    <Button
        android:id="@+id/raidStartButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/start_button_hint"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp" />
</RelativeLayout>